fix(css-properties): wrap calculations with calc()

--- a/src/styles/quarks/_quarks.css-properties.scss
+++ b/src/styles/quarks/_quarks.css-properties.scss
@@ -19,12 +19,12 @@
 
   --spacer:                  1.5rem; // 24px
 
-  --spacer-xx:               var(--spacer) * 4; // 96px
-  --spacer-xl:               var(--spacer) * 2.5; // 60px
-  --spacer-lg:               var(--spacer) * 2; // 48px
-  --spacer-md:               var(--spacer) * 1.5; // 36px
-  --spacer-sm:               var(--spacer) * .75; // 18px
-  --spacer-xs:               var(--spacer) * .5; // 12px
+  --spacer-xx:               calc(var(--spacer) * 4); // 96px
+  --spacer-xl:               calc(var(--spacer) * 2.5); // 60px
+  --spacer-lg:               calc(var(--spacer) * 2); // 48px
+  --spacer-md:               calc(var(--spacer) * 1.5); // 36px
+  --spacer-sm:               calc(var(--spacer) * .75); // 18px
+  --spacer-xs:               calc(var(--spacer) * .5); // 12px
 
 
   /**
@@ -42,13 +42,20 @@
    *    + width of official logo * 2
    *    + space between logo and u-container * 2
    */
-  --screen-xl:                var(--screen-lg) + var(--spacer-xx) * 2 + var(--spacer) * 2; // 90rem - 1440px
+  --screen-xl:               calc(var(--screen-lg) + calc(var(--spacer-xx) * 2) + calc(var(--spacer) * 2)); // 90rem - 1440px
 
   --screen-xs-max:           44.9375rem; // 719px (--screen-sm - 1px)
   --screen-sm-max:           61.9375rem; // 991px (--screen-md - 1px)
   --screen-md-max:           74.9375rem; // 1199px (--screen-lg - 1px)
   --screen-lg-max:           89.9375rem; // 1439px (--screen-xl - 1px)
 
+
+  /**
+   * BORDERS
+   * -------------------------------------------------------------------
+   */
+
+  --border-radius:           0;
 
   /**
    * ANIMATIONS
